@@ -9,6 +9,7 @@ import org.springframework.stereotype.Service;
 import com.laderrco.fortunelink.portfolio.domain.model.valueobjects.financial.Currency;
 import com.laderrco.fortunelink.portfolio.domain.model.valueobjects.financial.MarketAssetInfo;
 import com.laderrco.fortunelink.portfolio.domain.model.valueobjects.financial.MarketAssetQuote;
+import com.laderrco.fortunelink.portfolio.domain.model.valueobjects.financial.SymbolSearchResult;
 import com.laderrco.fortunelink.portfolio.domain.model.valueobjects.identifiers.AssetSymbol;
 import com.laderrco.fortunelink.portfolio.infrastructure.market.MarketDataProvider;
 import com.laderrco.fortunelink.portfolio.infrastructure.market.fmp.dtos.FmpProfileResponse;
@@ -26,40 +27,51 @@ public class FmpProvider implements MarketDataProvider {
   private final FmpResponseMapper responseMapper;
 
   @Override
-  public Map<AssetSymbol, MarketAssetQuote> fetchBatchQuotes(Set<AssetSymbol> symbols) {
-    if (symbols == null || symbols.isEmpty()) {
-      return Collections.emptyMap();
+  // @param knownCurrencies - currencies from info repo
+  public Map<AssetSymbol, MarketAssetQuote> fetchBatchQuotes(Set<AssetSymbol> symbols,
+      Map<AssetSymbol, Currency> knownCurrencies) { 
+    if (symbols == null || symbols.isEmpty())
+      return Map.of();
+
+    Map<AssetSymbol, MarketAssetQuote> results = new HashMap<>();
+
+    for (AssetSymbol symbol : symbols) {
+      try {
+        FmpQuoteResponse raw = fmpClient.getQuote(symbol.symbol());
+        if (raw == null)
+          continue;
+
+        // Use stored currency, fall back to USD with a warning
+        Currency currency = knownCurrencies.getOrDefault(symbol, null);
+        if (currency == null) {
+          log.warn("No stored trading currency for {}. Defaulting to USD. " +
+              "Record a transaction first to seed asset info.", symbol.symbol());
+          currency = Currency.USD;
+        }
+
+        MarketAssetQuote quote = responseMapper.toQuote(raw, currency);
+        if (quote != null) {
+          results.put(symbol, quote);
+        }
+      } catch (Exception e) {
+        // One bad symbol must not kill the entire portfolio load
+        log.warn("Failed to fetch quote for symbol={}: {}", symbol.symbol(), e.getMessage());
+      }
     }
-
-    List<String> tickerStrings = symbols.stream()
-        .map(AssetSymbol::symbol)
-        .toList();
-
-    // client.getBatchQuotes performs the sequential mapping for Free Tier
-    return fmpClient.getBatchQuotes(tickerStrings).stream()
-        .map(responseMapper::toDomain)
-        .filter(Objects::nonNull)
-        .collect(Collectors.toMap(
-            MarketAssetQuote::symbol,
-            quote -> quote,
-            (existing, replacement) -> existing));
+    return Collections.unmodifiableMap(results);
   }
 
-  public Optional<MarketAssetQuote> fetchCurrentQuote(AssetSymbol symbol) {
-    try {
-      FmpQuoteResponse response = fmpClient.getQuote(symbol.symbol());
-      return Optional.ofNullable(responseMapper.toDomain(response));
-    } catch (Exception e) {
-      log.error("FMP failed to fetch current quote for {}: {}", symbol.symbol(), e.getMessage());
-      return Optional.empty();
-    }
+  @Override
+  public Optional<MarketAssetQuote> fetchHistoricalQuote(AssetSymbol symbol, Instant date) {
+    log.warn("Historical quotes not implemented for FMP (Free Tier limitation)");
+    return Optional.empty();
   }
 
   @Override
   public Optional<MarketAssetInfo> fetchAssetInfo(AssetSymbol symbol) {
     try {
       FmpProfileResponse response = fmpClient.getProfile(symbol.symbol());
-      return Optional.ofNullable(responseMapper.toDomain(response));
+      return Optional.ofNullable(responseMapper.toAssetInfo(response));
     } catch (Exception e) {
       log.warn("FMP failed to fetch asset info for {}: {}", symbol.symbol(), e.getMessage());
       return Optional.empty();
@@ -78,7 +90,7 @@ public class FmpProvider implements MarketDataProvider {
 
     // Note: Ensure your FmpClient has a getBatchProfiles method that iterates
     return fmpClient.getBatchProfiles(tickerStrings).stream()
-        .map(responseMapper::toDomain)
+        .map(responseMapper::toAssetInfo)
         .filter(Objects::nonNull)
         .collect(Collectors.toMap(
             MarketAssetInfo::symbol,
@@ -87,20 +99,18 @@ public class FmpProvider implements MarketDataProvider {
   }
 
   @Override
-  public List<MarketAssetInfo> searchSymbols(String query) {
-    if (query == null || query.isBlank()) {
-      return Collections.emptyList();
-    }
+  public List<SymbolSearchResult> searchSymbols(String query) {
+    if (query == null || query.isBlank())
+      return List.of();
 
     try {
-      // Note: Add getSearch(query) to FmpClient returning List<FmpSearchResponse>
       return fmpClient.getSearch(query).stream()
-          .map(responseMapper::toDomain)
+          .map(responseMapper::toSearchResult)
           .filter(Objects::nonNull)
           .toList();
     } catch (Exception e) {
-      log.error("FMP search failed for '{}': {}", query, e.getMessage());
-      return Collections.emptyList();
+      log.error("FMP symbol search failed for query='{}': {}", query, e.getMessage());
+      return List.of(); // search failure is non-fatal, return empty list
     }
   }
 
@@ -113,23 +123,12 @@ public class FmpProvider implements MarketDataProvider {
   }
 
   @Override
-  public boolean supports(AssetSymbol symbol) {
-    return supportsSymbol(symbol);
-  }
-
-  @Override
   public boolean supportsSymbol(AssetSymbol symbol) {
     if (symbol == null || symbol.symbol() == null)
       return false;
     // Matches standard tickers, tickers with dots (BRK.B), or hyphens
     // (indices/crypto)
     return symbol.symbol().matches("[A-Z0-9\\.\\-^]+");
-  }
-
-  @Override
-  public Optional<MarketAssetQuote> fetchHistoricalQuote(AssetSymbol symbol, Instant date) {
-    log.warn("Historical quotes not implemented for FMP (Free Tier limitation)");
-    return Optional.empty();
   }
 
   @Override
